fix: finish responsive form

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -26,6 +26,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Unicase:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cantarell&family=Electrolize&family=Karma:wght@300&family=Unica+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Archivo&family=Fredoka+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Archivo&family=Fredoka+One&family=Pathway+Gothic+One&display=swap" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
