--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -29,7 +29,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Archivo&family=Fredoka+One&family=Pathway+Gothic+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Baloo+2&family=Cutive+Mono&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300&family=Teko:wght@300&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2&family=Goldman&family=IM+Fell+English+SC&family=Khand:wght@300&family=Rajdhani:wght@300&family=Turret+Road:wght@200&display=swap" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
