--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -30,6 +30,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Baloo+2&family=Cutive+Mono&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300&family=Teko:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2&family=Goldman&family=IM+Fell+English+SC&family=Khand:wght@300&family=Rajdhani:wght@300&family=Turret+Road:wght@200&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
